# tradememory-protocol

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DAILY_REFLECTION_SETUP.md  Dockerfile  LICENSE  MT5_SYNC_SETUP.md  README.md  README_ZH.md  RESEARCH_LOG.md  ROADMAP.md  TERMS.md  VALIDATION_RESULTS.md  daily_reflection.py  dashboard.py  demo.py  docker-compose.yml  install.sh  llms.txt  mt5_sync.py  pyproject.toml  render.yaml  requirements.txt  server.json  smithery.yaml  ssrt-phase2-spec.md  ssrt-spec.md  start_daily_reflection.bat  start_trade_adapter.bat  trade_adapter.py  validation_step1_results.json  validation_step3_results.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/workflows/: ci.yml  live-executor.yml
.skills/strategy-validator/: SKILL.md
.skills/tradememory/: SKILL.md
assets/: fb_post_whale_fingerprint.md  generate_evolution.html  generate_header.html  generate_l1l2l3.html  generate_owm.html  generate_schema.html  generate_schema_zh.html  generate_whale_compare.html
dashboard/: index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
dashboard/src/: App.tsx
data/: whale_0x7a16fF_trades.csv
docs/: API.md  ARCHITECTURE.md  ARIADNG_UX_REVIEW.md  AWESOME_LISTS.md  BEFORE_AFTER.md  DEMO_RESULTS_TEMPLATE.md  DEMO_STORYLINE.md  EXECUTION_LOG.md  GETTING_STARTED.md  LAUNCH_STRATEGY.md  OWM_FRAMEWORK.md  QUICK_START.md  README_OLD_2026-04-05.md  README_ZH.md  REFLECTION_ENGINE_GUIDE.md  REFLECTION_FORMAT.md  RESEARCH_LOG.md  ROADMAP.md  SCHEMA.md  TDR_SPEC_v1.md  TUTORIAL.md  TUTORIAL_ZH.md  USE_CASES.md  VALIDATION_RESULTS.md  anti-resonance-package.md  article-adding-memory-to-ea.md  blog-evolution-experiment-zh.md  blog-evolution-experiment.md  blueprint.docx  trading-ai-failure-taxonomy.md
docs/adr/: 001-owm-multiplicative-scoring.md  (+3 more)
hosted/: server.py
marketing/: demo-script.md
reports/: daily_2026-03-01.json  daily_2026-03-01.txt  distribution-steps.md  market-research-2026-03.md  research-01-competitors.md  research-02-channels.md  research-03-painpoints.md  research-04-seo-pricing.md  weekly_2026-03-01.json  weekly_2026-03-01.txt
research/: README.md
scripts/: TradeMemory_AutoStart.xml  daily_monitor.py  daily_reflection.py  daily_review.py  demo.py  evolution_demo.py  evolution_live_test.py  export_backtest_trades.py  export_demo_svg.py  export_mt5_csv.py  generate_backtest_mock.py  generate_index.py  generate_readme_assets.py  generate_validation_charts.py  install_autostart.bat  live_executor.py  migrate_strategy_names.py  mt5_sync.py  mt5_sync_v3.py  parse_batch_results.py  record_demo.py  run_b1_stability.py  run_extended_oos.py  run_real_baseline.py  run_time_bias_test.py  seed_backtest_trades.py  start_services.bat  start_tradememory.pyw  stop_services.bat  strategy_definitions.py  trade_advisor.py  validate_l2_patterns.py  watchdog_mt5_sync.bat  weekly_report.py
tests/: test_adaptive_risk.py  test_audit.py  test_backtest_importer.py  test_backtester.py  test_binance_adapter.py  test_changepoint.py  test_context_drift.py  test_dashboard_api.py  test_data_protocol.py  test_decision_log_reader.py  test_discovery_parser.py  test_dqs.py  test_engine.py  test_event_log_reader.py  test_evolution_demo.py  test_evolution_discovery.py  test_evolution_endpoints.py  test_evolution_mcp_tools.py  test_evolution_models.py  test_evolution_research_log.py  test_export_backtest_trades.py  test_generator.py  test_hosted_server.py  test_integration.py  test_journal.py  test_legitimacy.py  test_llm_validation.py  test_mcp_tools.py  test_models.py  test_mt5_connector.py  test_owm_affective.py  test_owm_db.py  test_owm_decay.py  test_owm_mcp_tools.py  test_owm_prospective.py  test_patterns.py  test_property_based.py  test_random_baseline.py  test_re_evolution.py  test_reflection.py  (+11 more)
tradememory-plugin/: README.md
validation/: b1_run0_control.json  b1_run1_patterns.json  b1_run2_patterns.json  b1_run3_patterns.json  b1_stability_report.md  final_verdict.md  llm_step0_results.json  llm_wfo_results.json  reevolution_report.md
(+159 files in other folders)
