[project]
name = "tradememory"
version = "0.1.0"
description = "AI Agent Trading Memory & Adaptive Decision Layer"
authors = [{name = "sean.sys", email = "sean@sean.sys"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
